# spacelabel

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DECISIONS.md  DESIGN.md  LICENSE  README.md  pyproject.toml  renovate.json
.github/: PULL_REQUEST_TEMPLATE.md  SETTINGS.md  ruleset-main.json
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  publish.yml  release-please.yml
Casks/: spacelabel.rb
docs/: ARCHITECTURE.md  CLI.md  TESTING.md  UI.md  VERIFICATION.md  ui-mockup.html
packaging/: README.md  dev.mcsim.spacelabel.plist
packaging/homebrew/: spacelabel.rb
packaging/py2app/: launcher.py  setup.py
src/spacelabel/: __init__.py  __main__.py  cli.py  completion.py  install.py  labeling.py  logging_setup.py  model.py  store.py
src/spacelabel/agent/: __init__.py  app.py  geometry.py  hud.py  menubar.py  overlay.py  prefs.py  wallpaper.py
src/spacelabel/platform/: __init__.py  cgs.py  displays.py  notifications.py  oslog_handler.py  spaces_plist.py  switching.py
tests/: __init__.py  test_agent_imports.py  test_cgs_load.py  test_cgs_parse.py  test_cli.py  test_completion.py  test_displays.py  test_geometry.py  test_install.py  test_labeling.py  test_launcher.py  test_logging.py  test_menubar_buttons.py  test_smoke.py  test_spaces_plist.py  test_store.py  test_switching.py  test_wallpaper.py
todo/: README.md  critical-click-to-switch.md  critical-release-automation.md  fix-brew-upgrade-race.md  fix-cli-polish.md  fix-multidisplay-ordinal.md  fix-overlay-behavior.md  fix-prefs-menubar-ux.md  fix-sessions-overview.md  fix-stale-accessibility-grant.md  improvements.md  phase-6-blockers.md  remove-pipx.md  uninstall-purge.md  wallpaper-redesign.md
tools/: build_app.sh  codesign_app.sh  make_icon.py
